versioned_docs/version-2.12/reference/targets/kotlinc_plugin.mdx
---
title: kotlinc_plugin
---

import Field from "@site/src/components/reference/Field";
import styles from "@site/src/components/reference/styles.module.css";

---

A plugin for `kotlinc`.

To enable a `kotlinc` plugin, define a target with this target type, and set the `artifact` field to the address of a `jvm_artifact` target that provides the plugin. Set the `plugin_id` field to the ID of the plugin if that name cannot be inferred from the `name` of this target.

The standard `kotlinc` plugins are available via the following artifact coordinates and IDs: * All-open: `org.jetbrains.kotlin:kotlin-allopen:VERSION` (ID: `all-open`) * No-arg: `org.jetbrains.kotlin:kotlin-noarg:VERSION` (ID: `no-arg`) * SAM with receiver: `org.jetbrains.kotlin:kotlin-sam-with-receiver:VERSION` (ID: `sam-with-receiver`) * kapt (annotation processor): `org.jetbrains.kotlin:org.jetbrains.kotlin:kotlin-annotation-processing-embeddable:VERSION` (ID: `kapt3`) * Seralization: `org.jetbrains.kotlin:kotlin-serialization:VERSION` (ID: `serialization`)

Backend: <span className="color--primary">`pants.backend.experimental.kotlin`</span>

---

<span className={styles.options}>

## `tags`

<Field
    type_repr={`Iterable[str] | None`}
    default_repr={`None`}
>

Arbitrary strings to describe a target.

For example, you may tag some test targets with &#x27;integration_test&#x27; so that you could run `/home/josh/work/scie-pants/dist/scie-pants-linux-x86_64 --tag='integration_test' test ::` to only run on targets with that tag.

</Field>
## `description`

<Field
    type_repr={`str | None`}
    default_repr={`None`}
>

A human-readable description of the target.

Use `/home/josh/work/scie-pants/dist/scie-pants-linux-x86_64 list --documented ::` to see all targets with descriptions.

</Field>
## `artifact`

<Field
    type_repr={`str`}
    default_repr={`None`}
>

The address of a `jvm_artifact` that defines a plugin for `kotlinc`.

</Field>
## `plugin_id`

<Field
    type_repr={`str | None`}
    default_repr={`None`}
>

The ID for `kotlinc` to use when setting options for the plugin.

If not set, the plugin ID defaults to the target name.

</Field>
## `plugin_args`

<Field
    type_repr={`Iterable[str] | None`}
    default_repr={`None`}
>

Optional list of argument to pass to the plugin.

</Field>

</span>