versioned_docs/version-2.13/reference/targets/kotlinc_plugin.mdx
---
title: kotlinc_plugin
# The old-style `code...code` anchors are heading level 6, and shouldn't be visible in ToC
toc_max_heading_level: 5
---

import Field from "@site/src/components/reference/Field";
import styles from "@site/src/components/reference/styles.module.css";

---

A plugin for `kotlinc`.

To enable a `kotlinc` plugin, define a target with this target type, and set the `artifact` field to the address of a `jvm_artifact` target that provides the plugin. Set the `plugin_id` field to the ID of the plugin if that name cannot be inferred from the `name` of this target.

The standard `kotlinc` plugins are available via the following artifact coordinates and IDs: _ All-open: `org.jetbrains.kotlin:kotlin-allopen:VERSION` (ID: `all-open`) _ No-arg: `org.jetbrains.kotlin:kotlin-noarg:VERSION` (ID: `no-arg`) _ SAM with receiver: `org.jetbrains.kotlin:kotlin-sam-with-receiver:VERSION` (ID: `sam-with-receiver`) _ kapt (annotation processor): `org.jetbrains.kotlin:org.jetbrains.kotlin:kotlin-annotation-processing-embeddable:VERSION` (ID: `kapt3`) \* Seralization: `org.jetbrains.kotlin:kotlin-serialization:VERSION` (ID: `serialization`)

Backend: <span className="color--primary">`pants.backend.experimental.kotlin`</span>

---

<span className={styles.options}>

<div aria-hidden="true" style={ { visibility: 'hidden', height: 0 } }>
###### {#codetagscode}
</div>

## `tags`

<Field
    type_repr={`Iterable[str] | None`}
    default_repr={`None`}
>

Arbitrary strings to describe a target.

For example, you may tag some test targets with &#x27;integration_test&#x27; so that you could run `/home/josh/work/scie-pants/dist/scie-pants-linux-x86_64 --tag='integration_test' test ::` to only run on targets with that tag.

</Field>

<div aria-hidden="true" style={ { visibility: 'hidden', height: 0 } }>
###### {#codedescriptioncode}
</div>

## `description`

<Field
    type_repr={`str | None`}
    default_repr={`None`}
>

A human-readable description of the target.

Use `/home/josh/work/scie-pants/dist/scie-pants-linux-x86_64 list --documented ::` to see all targets with descriptions.

</Field>

<div aria-hidden="true" style={ { visibility: 'hidden', height: 0 } }>
###### {#codeartifactcode}
</div>

## `artifact`

<Field
    type_repr={`str`}
    default_repr={`None`}
>

The address of a `jvm_artifact` that defines a plugin for `kotlinc`.

</Field>

<div aria-hidden="true" style={ { visibility: 'hidden', height: 0 } }>
###### {#codeplugin_idcode}
</div>

## `plugin_id`

<Field
    type_repr={`str | None`}
    default_repr={`None`}
>

The ID for `kotlinc` to use when setting options for the plugin.

If not set, the plugin ID defaults to the target name.

</Field>

<div aria-hidden="true" style={ { visibility: 'hidden', height: 0 } }>
###### {#codeplugin_argscode}
</div>

## `plugin_args`

<Field
    type_repr={`Iterable[str] | None`}
    default_repr={`None`}
>

Optional list of argument to pass to the plugin.

</Field>

</span>
